# Termux-CLI

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.termux-cli/commands/: commit.md  explain.md  review.md
cli/: __init__.py  commands.py  main.py  repl.py  slash_commands.py  ui.py
config/: __init__.py  defaults.py  schema.py  settings.py
core/: __init__.py  agent.py  executor.py  memory.py  session.py
docs/: README.md  api.md  cli-reference.md  configuration.md  installation.md  mcp.md  memory.md  plugins.md  slash-commands.md  termux-setup.md  usage.md
examples/: basic_usage.py  custom_plugin.py  mcp_server.py
mcp/: __init__.py  client.py  protocol.py  server.py  tools.py
models/: __init__.py  anthropic.py  base.py  ollama.py  openai.py
plugins/: __init__.py  base.py  loader.py  registry.py
prompts/: __init__.py  system.py  templates.py
scripts/: build.sh  install.sh  setup.sh  test.sh
tests/: conftest.py  test_core.py  test_mcp.py  test_memory.py  test_plugins.py  test_slash_commands.py  test_tools.py
tools/: __init__.py  code_runner.py  file_ops.py  git_ops.py  search.py  shell.py
utils/: __init__.py  formatters.py  helpers.py  logger.py  validators.py
